@@ -2,6 +2,7 @@ Pending changes in the mainline
 ===============================
 
 * Upgrade to GDCM 2.8.8 for static builds
+* Upgraded Orthanc framework
 
 
 Version 2.4 (2018-04-23)
